--- a/series_wheel_legged_robot_ws/robot_description_pkg/CMakeLists.txt
+++ b/series_wheel_legged_robot_ws/robot_description_pkg/CMakeLists.txt
@@ -23,7 +23,7 @@ if(BUILD_TESTING)
   ament_lint_auto_find_test_dependencies()
 endif()
 
-install(DIRECTORY urdf config launch
+install(DIRECTORY urdf config launch plugins
 	DESTINATION share/${PROJECT_NAME}
 )
 ament_package()
